dexidp/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
  labels:
    exposed: "true"
spec:
  parentRefs:
  - kind: Gateway
    namespace: ingress
    name: external-gateway
  hostnames:
  - "dex.mythica.ai"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: dex
      port: 5556
